<resources>
    <string name="app_name">PokeDB</string>

    <string name="view_candy_progress">View Candy Progress</string>
    <string name="welcome">Welcome, Trainer!</string>

    <string name="edit_entry">Edit entry</string>
    <string name="edit_entries">Edit entries</string>
    <string name="name">Name</string>
    <string name="candies">Candies</string>
    <string name="candy">Candy</string>
    <string name="C">C</string>
    <string name="candies_to_evo">Candies to Evolution</string>
    <string name="CTE">CTE</string>
    <string name="n_evos">#E</string>
    <string name="num_can_evo">#Times can evolve</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="clear_entries">Clear Entries</string>

    <string name="Pokemon">Pokemon</string>
    <string name="Bulbasaur">Bulbasaur</string>
    <string name="Ivysaur">Ivysaur</string>
    <string name="Venusaur">Venusaur</string>
    <string name="Charmander">Charmander</string>
    <string name="Charmeleon">Charmeleon</string>
    <string name="Charizard">Charizard</string>
    <string name="Squirtle">Squirtle</string>
    <string name="Wartortle">Wartortle</string>
    <string name="Blastoise">Blastoise</string>
    <string name="Caterpie">Caterpie</string>
    <string name="Metapod">Metapod</string>
    <string name="Butterfree">Butterfree</string>
    <string name="Weedle">Weedle</string>
    <string name="Kakuna">Kakuna</string>
    <string name="Beedrill">Beedrill</string>
    <string name="Pidgey">Pidgey</string>
    <string name="Pidgeotto">Pidgeotto</string>
    <string name="Pidgeot">Pidgeot</string>
    <string name="Rattata">Rattata</string>
    <string name="Raticate">Raticate</string>
    <string name="Spearow">Spearow</string>
    <string name="Fearow">Fearow</string>
    <string name="Ekans">Ekans</string>
    <string name="Arbok">Arbok</string>
    <string name="Pikachu">Pikachu</string>
    <string name="Raichu">Raichu</string>
    <string name="Sandshrew">Sandshrew</string>
    <string name="Sandslash">Sandslash</string>
    <string name="NidoranF">Nidoran♀</string>
    <string name="Nidorina">Nidorina</string>
    <string name="Nidoqueen">Nidoqueen</string>
    <string name="NidoranM">Nidoran♂</string>
    <string name="Nidorino">Nidorino</string>
    <string name="Nidoking">Nidoking</string>
    <string name="Clefairy">Clefairy</string>
    <string name="Clefable">Clefable</string>
    <string name="Vulpix">Vulpix</string>
    <string name="Ninetales">Ninetales</string>
    <string name="Jigglypuff">Jigglypuff</string>
    <string name="Wigglytuff">Wigglytuff</string>
    <string name="Zubat">Zubat</string>
    <string name="Golbat">Golbat</string>
    <string name="Oddish">Oddish</string>
    <string name="Gloom">Gloom</string>
    <string name="Vileplume">Vileplume</string>
    <string name="Paras">Paras</string>
    <string name="Parasect">Parasect</string>
    <string name="Venonat">Venonat</string>
    <string name="Venomoth">Venomoth</string>
    <string name="Diglett">Diglett</string>
    <string name="Dugtrio">Dugtrio</string>
    <string name="Meowth">Meowth</string>
    <string name="Persian">Persian</string>
    <string name="Psyduck">Psyduck</string>
    <string name="Golduck">Golduck</string>
    <string name="Mankey">Mankey</string>
    <string name="Primeape">Primeape</string>
    <string name="Growlithe">Growlithe</string>
    <string name="Arcanine">Arcanine</string>
    <string name="Poliwag">Poliwag</string>
    <string name="Poliwhirl">Poliwhirl</string>
    <string name="Poliwrath">Poliwrath</string>
    <string name="Abra">Abra</string>
    <string name="Kadabra">Kadabra</string>
    <string name="Alakazam">Alakazam</string>
    <string name="Machop">Machop</string>
    <string name="Machoke">Machoke</string>
    <string name="Machamp">Machamp</string>
    <string name="Bellsprout">Bellsprout</string>
    <string name="Weepinbell">Weepinbell</string>
    <string name="Victreebel">Victreebel</string>
    <string name="Tentacool">Tentacool</string>
    <string name="Tentacruel">Tentacruel</string>
    <string name="Geodude">Geodude</string>
    <string name="Graveler">Graveler</string>
    <string name="Golem">Golem</string>
    <string name="Ponyta">Ponyta</string>
    <string name="Rapidash">Rapidash</string>
    <string name="Slowpoke">Slowpoke</string>
    <string name="Slowbro">Slowbro</string>
    <string name="Magnemite">Magnemite</string>
    <string name="Magneton">Magneton</string>
    <string name="Farfetchd">Farfetch\'d</string>
    <string name="Doduo">Doduo</string>
    <string name="Dodrio">Dodrio</string>
    <string name="Seel">Seel</string>
    <string name="Dewgong">Dewgong</string>
    <string name="Grimer">Grimer</string>
    <string name="Muk">Muk</string>
    <string name="Shellder">Shellder</string>
    <string name="Cloyster">Cloyster</string>
    <string name="Gastly">Gastly</string>
    <string name="Haunter">Haunter</string>
    <string name="Gengar">Gengar</string>
    <string name="Onix">Onix</string>
    <string name="Drowzee">Drowzee</string>
    <string name="Hypno">Hypno</string>
    <string name="Krabby">Krabby</string>
    <string name="Kingler">Kingler</string>
    <string name="Voltorb">Voltorb</string>
    <string name="Electrode">Electrode</string>
    <string name="Exeggcute">Exeggcute</string>
    <string name="Exeggutor">Exeggutor</string>
    <string name="Cubone">Cubone</string>
    <string name="Marowak">Marowak</string>
    <string name="Hitmonlee">Hitmonlee</string>
    <string name="Hitmonchan">Hitmonchan</string>
    <string name="Lickitung">Lickitung</string>
    <string name="Koffing">Koffing</string>
    <string name="Weezing">Weezing</string>
    <string name="Rhyhorn">Rhyhorn</string>
    <string name="Rhydon">Rhydon</string>
    <string name="Chansey">Chansey</string>
    <string name="Tangela">Tangela</string>
    <string name="Kangaskhan">Kangaskhan</string>
    <string name="Horsea">Horsea</string>
    <string name="Seadra">Seadra</string>
    <string name="Goldeen">Goldeen</string>
    <string name="Seaking">Seaking</string>
    <string name="Staryu">Staryu</string>
    <string name="Starmie">Starmie</string>
    <string name="MrMime">Mr. Mime</string>
    <string name="Scyther">Scyther</string>
    <string name="Jynx">Jynx</string>
    <string name="Electabuzz">Electabuzz</string>
    <string name="Magmar">Magmar</string>
    <string name="Pinsir">Pinsir</string>
    <string name="Tauros">Tauros</string>
    <string name="Magikarp">Magikarp</string>
    <string name="Gyarados">Gyarados</string>
    <string name="Lapras">Lapras</string>
    <string name="Ditto">Ditto</string>
    <string name="Eevee">Eevee</string>
    <string name="Vaporeon">Vaporeon</string>
    <string name="Jolteon">Jolteon</string>
    <string name="Flareon">Flareon</string>
    <string name="Porygon">Porygon</string>
    <string name="Omanyte">Omanyte</string>
    <string name="Omastar">Omastar</string>
    <string name="Kabuto">Kabuto</string>
    <string name="Kabutops">Kabutops</string>
    <string name="Aerodactyl">Aerodactyl</string>
    <string name="Snorlax">Snorlax</string>
    <string name="Articuno">Articuno</string>
    <string name="Zapdos">Zapdos</string>
    <string name="Moltres">Moltres</string>
    <string name="Dratini">Dratini</string>
    <string name="Dragonair">Dragonair</string>
    <string name="Dragonite">Dragonite</string>
    <string name="Mewtwo">Mewtwo</string>
    <string name="Mew">Mew</string>

</resources>
