<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_display_candy_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ray.pokedb.DisplayCandyProgress">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            style="?android:attr/buttonBarStyle"
            android:gravity="center_horizontal"
            android:id="@+id/topButtonsLinearLayout">
            
            <Button
                android:text="@string/edit_entry"
                android:fontFamily="casual"
                android:textSize="@dimen/candy_progress_topbarbutton_fontsize"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/candy_progress_button_width"
                android:layout_height="@dimen/candy_progress_button_height"
                android:id="@+id/button_add_entry"
                android:onClick="clickEditEntry"/>
            <Button
                android:text="@string/clear_entries"
                android:fontFamily="casual"
                android:textSize="@dimen/candy_progress_topbarbutton_fontsize"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/candy_progress_button_width"
                android:layout_height="@dimen/candy_progress_button_height"
                android:id="@+id/buttonClearEntries"
                android:onClick="clickClearEntries"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/topButtonsLinearLayout"
            android:id="@+id/progressBarLayout">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:id="@+id/progressBarEvos" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:id="@+id/textViewEvoPercent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarLayout"
            android:id="@+id/columnHeadersLinearLayout">

            <Button
                android:text="@string/name"
                android:fontFamily="casual"
                android:textSize="6pt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/candy_progress_name_column_width"
                android:layout_height="match_parent"
                android:onClick="clickCandyProgressName"
                android:textAlignment="viewStart"/>

            <Button
                android:text="@string/C"
                android:fontFamily="casual"
                android:textSize="6pt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/candy_progress_candies_column_width"
                android:layout_height="match_parent"
                android:onClick="clickCandyProgressCandy"
                android:textAlignment="viewStart"/>

            <Button
                android:text="@string/CTE"
                android:fontFamily="casual"
                android:textSize="6pt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/candy_progress_candiesToEvo_column_width"
                android:layout_height="match_parent"
                android:onClick="clickCandyProgressCandyToEvo"
                android:textAlignment="viewStart"/>
            <Button
                android:text="@string/n_evos"
                android:fontFamily="casual"
                android:textSize="6pt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="clickCandyProgressNumEvos"
                android:textAlignment="viewStart"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/columnHeadersLinearLayout">

            <TextView
                android:layout_width="@dimen/candy_progress_name_column_width"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:fontFamily="casual"
                android:id="@+id/display_all_names"/>

            <TextView
                android:layout_width="@dimen/candy_progress_candies_column_width"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:id="@+id/display_all_candies"/>

            <TextView
                android:layout_width="@dimen/candy_progress_candiesToEvo_column_width"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:id="@+id/display_all_candies_to_evo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:id="@+id/display_all_num_of_evo"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>